--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "memory.h": "c",
         "aes.h": "c",
-        "test.h": "c"
-    }
+        "test.h": "c",
+        "circlebuffer.h": "c"
+    },
+    "cmake.configureOnOpen": false
 }
